2002-12-02  Adam Fedor  <fedor@gnu.org>

	* Port baseadd to MacOSX.
	* Makefile.postamble (header-links): Don't link gnustep/gui to 
	Foundation for FOUNDATION_LIB=nx
	* Headers/gnustep/base/NSObjCRuntime.h (FOUNDATION_EXPORT): Define
	only if not defined already.
	* Headers/gnustep/base/objc-gnu2next.h: Define _CLS_META, _CLS_CLASS
	* Source/Makefile.preamble (libgnustep-baseadd_LIBRARIES_DEPEND_UPON):
	Depend on framework Foudation if FOUNDATION_LIB=nx
	* Source/objc-gnu2next.m: Move most functions...
	* Source/Additions/GSNextRuntime.m: ...to here.
	* Source/Additions/GSCompatibility.[hm]: New files.
	* Source/Additions/GCDictionary.m: Include it.
	* Source/Additions/GSMime.m: Idem.
	* Source/Additions/GSXML.m: Idem.
	* Source/Additions/GCObject.m: Idem. Null out mutex code
	on NeXT_RUNTIME (Need a better fix).
	* Source/Additions/GNUmakefile: Don't compile Unicode.m
	on FOUNDATION_LIB=nx (not ported yet).
	* Source/Additions/GSObjCRuntime.m (GSObjCAddClasses): Version
	for NeXT_RUNTIME.
	(GSObjCAddClassBehavior): Fixes for NeXT_RUNTIME.
	* Source/Additions/behavior.m (behavior_class_add_class): Idem.

2002-12-02  Jonathan Gapen  <jagapen@wisc.edu>

	* Headers/gnustep/base/NSPort.h: Add NSSocketPort interface.
	* Source/NSSocketPort.m: New file. New MacOS X class partially
	implemented; serves as BSD socket wrapper.

2002-12-02  Adam Fedor  <fedor@gnu.org>

	* base.make.in (CONFIG_SYSTEM_LIBS): Set only if shared=no.
	* config.make.in (CONFIG_SYSTEM_LIBS): Set only if shared=yes.
	* Source/Makefile.preamble (libgnustep-base_LIBRARIES_DEPEND_UPON):
	Depend on $(CONFIG_SYSTEM_LIBS) if shared=yes.

2002-11-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/plparse.m: Stefan Urbaneks patch to return 1 on failure.
	* Tools/sfparse.m: Similar code for this tool.
	* Source/Additions/GSObjCRuntime.m: Tidied function names
	* Headers/gnustep/base/GSObjCRuntime.h: ditto.
	* Source/NSKeyValueCoding.m: Use new function names.
